# semantic-release-python-uv

./: CHANGELOG.md  pyproject.toml  test.txt
.github/workflows/: release-pr.yml  release-publish.yml  release.yml
src/: main.py
